...
import { StatusBar } from 'expo-status-bar';
import {
  Building,
  CheckCircle2,
  Mail,
  Phone,
  Search,
  User,
} from 'lucide-react-native';
import React, { useEffect, useState } from 'react';
import {
  ActivityIndicator,
  Alert,
...
